--- a/package.json
+++ b/package.json
@@ -4,26 +4,49 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "wds": "webpack-dev-server --progress --colors",
-    "start": "dev_appserver.py app.yaml",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prestart": "babel-node scripts/start-message.js",
+    "start": "npm-run-all --parallel dev-server *:watch",
+    "app": "dev_appserver.py --port=8080 app.yaml",
+    "dev-server": "babel-node --plugins transform-es2015-modules-commonjs scripts/dev-server.js",
+    "lint": "node_modules/.bin/esw webpack.*.js src/**/*.{js,jsx} scripts",
+    "lint:watch": "npm run lint -- --watch",
+    "test": "mocha --reporter progress scripts/test-setup.js \"src/**/*.test.js\"",
+    "test:watch": "npm run test -- --watch"
   },
-  "author": "",
+  "author": "Brett Peters",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "babel-register": "^6.24.1",
+    "colors": "^1.1.2",
     "css-loader": "^0.28.0",
+    "enzyme": "^2.8.1",
+    "eslint": "^3.19.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.10.3",
+    "eslint-watch": "^3.0.1",
+    "expect": "^1.20.2",
     "html-webpack-plugin": "^2.28.0",
+    "jsdom": "^9.12.0",
+    "mocha": "^3.2.0",
+    "node-notifier": "^5.1.2",
     "node-sass": "^4.5.2",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "npm-run-all": "^4.0.2",
+    "once": "^1.4.0",
+    "react-addons-test-utils": "^15.5.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
+  },
+  "dependencies": {
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   }
 }
