--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev-server": "babel-node --plugins transform-es2015-modules-commonjs scripts/dev-server.js",
     "lint": "esw --ext .js,.jsx webpack.*.js src scripts",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --compilers jsx:babel-register --reporter progress scripts/test-setup.js \"src/**/*.test.js\"",
+    "test": "mocha --compilers jsx:babel-register --reporter dot scripts/test-setup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch"
   },
   "author": "Brett Peters",
