--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint": "esw --ext .js,.jsx webpack.*.js src scripts",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --compilers jsx:babel-register --reporter dot scripts/test-setup.js \"src/**/*.test.js\"",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "prebuild": "rimraf dist/",
+    "build": "webpack -p",
+    "deploy": "npm run build && gcloud app deploy app.yaml"
   },
   "author": "Brett Peters",
   "license": "ISC",
@@ -32,6 +35,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-react": "^6.10.3",
     "eslint-watch": "^3.0.1",
+    "github-current-user": "^2.5.0",
     "html-webpack-plugin": "^2.28.0",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
@@ -41,6 +45,7 @@
     "react-addons-test-utils": "^15.5.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-test-renderer": "^15.5.4",
+    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.3.3",
